<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/MainLinearLayoutStyle">

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/gidget" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question_six" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_age"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/decrease" />

            <TextView
                android:id="@+id/age_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/initial_age" />

            <Button
                android:id="@+id/increment_age"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/increase" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>