<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/beefy5layer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textColor="@android:color/black"
                android:textSize="26dp" />

            <!-- checkbox row 1 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/sour_cream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onIngredientClick"
                        android:text="@string/sour_cream"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/jalapeno_sauce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onIngredientClick"
                        android:text="@string/jalapeno_sauce"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/red_sauce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onIngredientClick"
                        android:text="@string/red_sauce"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/nacho_cheese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onIngredientClick"
                        android:text="@string/nacho_cheese"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/beans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:onClick="onIngredientClick"
                        android:text="@string/beans"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/beef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:onClick="onIngredientClick"
                        android:text="@string/beef"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/cheese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:onClick="onIngredientClick"
                        android:text="@string/cheese"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/onion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:onClick="onIngredientClick"
                        android:text="@string/onion"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>